--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     background-color: fade-out($color: black, $amount: 0.5);
+    z-index: 1;
   }
   &-header {
     font-size: 22px;
