--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -4,6 +4,12 @@
     border: 1px solid red;
     display: flex;
     flex-direction: column;
+    &.hasAside {
+        flex-direction: row;
+        .yui-layout {
+            flex-direction: column;
+        }
+    }
     &-content {
         flex-grow: 1;
         border: 1px solid green;
