--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -1,22 +1,19 @@
 @import '../help';
 
 .yui-layout {
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
-    &.hasAside {
+    &-content {
+        flex-grow: 1;
+    }
+    & & {
+        flex-grow: 1;
+        flex-direction: row;
+    }
+    &-hasAside {
         flex-direction: row;
         .yui-layout {
             flex-direction: column;
         }
-    }
-    &-content {
-        flex-grow: 1;
-        border: 1px solid green;
-    }
-    & & {
-        flex-grow: 1;
-        border: 1px solid blue;
-        flex-direction: row;
     }
 }
