--- a/lib/form/form.scss
+++ b/lib/form/form.scss
@@ -1,15 +1,24 @@
 .yui-form {
-    &-td {
-        padding-top: 12px;
-        padding-bottom: 12px;
+    &-table {
+        border-collapse: collapse;
     }
-    &-tr:first-child &-td {
+    &-label {
+        line-height: 32px;
+    }
+    &-td {
+        vertical-align: top;
         padding-top: 0;
+        padding-bottom: 8px;
     }
     &-tr:last-child &-td {
         padding-bottom: 0;
     }
     &-td + &-td {
         padding-left: 16px;
+    }
+    &-error {
+        color: red;
+        margin-top: 4px;
+        font-size: 0.8em;
     }
 }
