--- a/example.scss
+++ b/example.scss
@@ -1,9 +1,26 @@
-* {margin: 0;padding: 0; box-sizing: border-box;}
+* {margin: 0;padding: 0; box-sizing: border-box;font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;}
 *::before {box-sizing: border-box;}
 *::after {box-sizing: border-box;}
 ul, ol {list-style: none;}
-h1, h2, h3, h4, h5, h6 {font-weight: normal;}
-a { text-decoration: none; color: inherit; }
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  font-weight: 500;
+  margin-bottom: 20px;
+  margin-top: 8px;
+  color: rgba(0, 0, 0, 0.85);
+}
+h1 {
+  font-size: 30px;
+  line-height: 38px;
+}
+a { 
+  text-decoration: none; 
+  color: inherit; 
+}
+a.link {
+  color: #1890ff;
+  margin: 0 4px;
+}
 pre {
   font-family: "Fira Code Medium", Consolas, monospace;
 }
@@ -18,54 +35,169 @@ body {
   min-height: 100vh;
 }
 .site-main {
-  padding-top: 16px;
+  padding: 20px;
+  flex-grow: 1;
 }
 .site-header {
-  background: $border-color;
-  padding: 8px 0;
+  height: 60px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   .logo {
-    padding: 0 $padding;
+    padding: 0 40px;
     display: flex;
     align-items: center;
     > img {margin-right: 8px;}
     > span {
       color: $main-color;
-      font-size: 32px;
+      font-size: 20px;
+      font-weight: 600;
+      color: rgba(0, 0, 0, 0.65);
+    }
+  }
+  .github {
+    margin-right: 40px;
+    SVG {
+      width: 24px;
+      height: 24px; 
     }
   }
 }
 .site-aside {
-  border-right: 1px solid #EEEEEE;
-  margin-right: 16px;
+  width: 275px;
+  margin-top: 40px;
+  padding-bottom: 200px;
+  position: relative;
   h2 {
     padding: $padding;
     font-size: 18px;
   }
-  ul {
-    min-width: 12em;
-    > li {
-      a {
-        color: #333;
-        display: block;
-        padding: 8px $padding;
-        &:hover {
-          color: $main-color;
-        }
-        &.active {
-          color: white;
-          background: $main-color;
-        }
-      }
-    }
+}
+
+.site-aside::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.15);
+  z-index: 100;
+}
+
+.site-menu {
+  width: 275px;
+  border-right: none;
+  color: rgba(0, 0, 0, 0.65);
+  display: inline-block;
+  background-color: #fff;
+  position: relative;
+}
+
+.site-menuitem {
+  font-weight: 600;
+  height: 40px;
+  padding-left: 30px;
+  padding-right: 16px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.65);
+  cursor: pointer;
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  position: relative;
+  font-size: 14px;
+  line-height: 22px;
+  &:hover {
+    color: #40a9ff;
   }
+  &.active {
+    color: #1890ff;
+    background-color: #e6f7ff;
+    & > .site-menuitemend {
+      height: 100%;
+      top: 0px;
+      opacity: 1;
+      transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+      position: absolute;
+      right: 0;
+      background-color: #1890ff;
+      width: 3px;
+      border-radius: 1px;
+    }
+  } 
 }
-.site-footer {
-  text-align: center;
+
+.site-subitem {
+  font-weight: 400;
+  padding-left: 50px;
+}
+
+.site-menuitemend {
+  height: 0px;
+  opacity: 0;
+  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #1890ff;
+  width: 3px;
+  border-radius: 1px;
+}
+
+.site-submenutotaltitle {
+  color: rgba(0, 0, 0, 0.35);
+  line-height: 20px;
+  cursor: default;
+  height: 40px;
+  padding-left: 30px;
+  padding-right: 34px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 22px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.65);
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  position: relative;
+}
+
+.site-submenutitle {
+  height: 40px;
+  padding-left: 30px;
+  padding-right: 34px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  line-height: 22px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.65);
+  cursor: pointer;
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  position: relative;
+  color: rgba(0, 0, 0, 0.35);
   font-size: 12px;
-  color: #666;
-  padding: 16px 0;
-  border-top: 1px solid $border-color;
+  line-height: 20px;
+  font-weight: 500;
+  cursor: default;
 }
-.example {
-  padding: 16px 0;
+
+.site-footer {
+  background-color: #34383b;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.55);
+  padding: 25px 0;
+  border-top: 1px solid $border-color;
 }
