--- a/lib/layout/layout.example.scss
+++ b/lib/layout/layout.example.scss
@@ -1,20 +1,35 @@
-.x {
-    height: 40px;
-    background: #4285f4;
-    margin: 4px 0;
-    color: white;
-  }
-  .y {
-    background: lighten(#4285f4, 5%);
-    margin: 4px 0;
-    color: white;
-  }
-  .z {
-    background: #34a853;
-    width: 100px;
-    margin: 4px 0;
-    color: white;
-  }
-  .z + .y, .y + .z, .z + .gu-layout {
-    margin-left: 8px;
-  }
+.blockH {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 64px;
+  background-color: #7dbcea;
+  color: white;
+}
+
+.blockC {
+  min-height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(16, 142, 233, 1);
+  color: white;
+}
+
+.blockF {
+  background-color: #7dbcea;
+  color: white;
+  padding: 24px 50px;
+  flex: 0 0 auto;
+  text-align: center;
+}
+
+.blockA {
+  background-color: #3ba0e9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-width: 200px;
+  color: white;
+}
