--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -6,13 +6,13 @@
     &-content {
         flex-grow: 1;
     }
-    & & {
+    & > & {
         flex-grow: 1;
         flex-direction: row;
     }
     &-hasAside {
         flex-direction: row;
-        .yui-layout {
+        > .yui-layout {
             flex-direction: column;
         }
     }
