--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -1,6 +1,6 @@
 @import '../help';
 .yui-dialog {
-    position: fixed; background: white; min-width: 20em;
+    position: fixed; background: white; min-width: 500px;
     z-index: 2;
     border-radius: 4px; top: 50%; left: 50%; transform: translate(-50%, -50%);
     &-mask {
@@ -13,17 +13,18 @@
     z-index: 1;
   }
   &-header {
-    font-size: 22px;
-    padding: 8px 16px;
-    border-bottom: 1px solid grey;
+    font-size: 16px;
+    padding: 20px 16px;
+    border-bottom: 1px solid #e8e8e8
   }
   &-main {
-    padding: 8px 16px;
+    padding: 24px;
     min-height: 6em;
+    font-size: 14px;
   }
   &-footer {
-    padding: 8px 16px;
-    border-top: 1px solid grey;
+    padding: 10px 16px;
+    border-top: 1px solid #e8e8e8;
     display: flex;
     justify-content: flex-end;
   }
