修改为开发时本地引用，调整dialog样式

--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -1,6 +1,7 @@
 @import "../help";
 .yui-button {
   padding: 4px 16px;
+  border-radius: 4px;
   line-height: 22px;
   transition: all 250ms;
   cursor: pointer;
